--- a/app/src/main/res/layout/include_header.xml
+++ b/app/src/main/res/layout/include_header.xml
@@ -15,11 +15,11 @@
 
     <ImageView
         android:id="@+id/icon"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
-        android:src="@mipmap/ic_img_user_default"
+        android:src="@mipmap/header"
         android:tag="zoom"/>
 
     <TextView
