--- a/app/src/main/res/layout/activity_pull_gridview.xml
+++ b/app/src/main/res/layout/activity_pull_gridview.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.lzy.ui.PullZoomView
+<com.lzy.widget.PullZoomView
     android:id="@+id/pzv"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -12,7 +12,7 @@
 
         <include layout="@layout/include_header"/>
 
-        <com.lzy.ui.FullyGridView
+        <com.lzy.widget.ExpandGridView
             android:id="@+id/gridView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -20,4 +20,4 @@
             android:tag="content"/>
     </LinearLayout>
 
-</com.lzy.ui.PullZoomView>
+</com.lzy.widget.PullZoomView>
