--- a/app/src/main/res/layout/activity_pull_listview.xml
+++ b/app/src/main/res/layout/activity_pull_listview.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.lzy.ui.PullZoomView
+<com.lzy.widget.PullZoomView
     android:id="@+id/pzv"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -12,11 +12,11 @@
 
         <include layout="@layout/include_header"/>
 
-        <com.lzy.ui.FullyListView
+        <com.lzy.widget.ExpandListView
             android:id="@+id/listView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:tag="content"/>
     </LinearLayout>
 
-</com.lzy.ui.PullZoomView>
+</com.lzy.widget.PullZoomView>
