--- a/app/src/main/res/layout/activity_pull_view_group.xml
+++ b/app/src/main/res/layout/activity_pull_view_group.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.lzy.ui.PullZoomView
+<com.lzy.widget.PullZoomView
     android:id="@+id/pzv"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -48,4 +48,4 @@
         </RelativeLayout>
     </LinearLayout>
 
-</com.lzy.ui.PullZoomView>
+</com.lzy.widget.PullZoomView>
